@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: expr.test,v 1.30.2.2 2005/01/21 19:20:17 dgp Exp $
+# RCS: @(#) $Id: expr.test,v 1.30.2.3 2005/02/03 23:56:14 kennykb Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -5126,6 +5126,23 @@ test expr-28.1014 {input floating-point conversion} {ieeeFloatingPoint} {
     # Ad2b dieee UN -93501703572661982 E-26 x -10103f97ea6e13_0111111111111111111111111111111111111111111111111110& E-30
     convertToDouble -93501703572661982E-26
 } 0xbe10103f97ea6e13
+
+test expr-29.1 {smallest representible number} {ieeeFloatingPoint} {
+    list [catch {convertToDouble 4.9406564584124654e-324} result] \
+	$result \
+	[catch {convertToDouble 2.4703282292062325e-324} result] \
+	$result \
+	[catch {convertToDouble 2.4703282292062307e-324} result] \
+	$result
+} {0 0x0000000000000001 0 0x0000000000000001 1 {floating-point value too small to represent}}
+test expr-29.2 {smallest representible number} {ieeeFloatingPoint} {
+    list [catch {convertToDouble -4.9406564584124654e-324} result] \
+	$result \
+	[catch {convertToDouble -2.4703282292062325e-324} result] \
+	$result \
+	[catch {convertToDouble -2.4703282292062307e-324} result] \
+	$result
+} {0 0x8000000000000001 0 0x8000000000000001 1 {floating-point value too small to represent}}
 
 # cleanup
 if {[info exists a]} {
